# RELIAB-J-LLM-as-a-Judge-is-Not-Enough

./: LICENSE  README.md  pyproject.toml  release_manifest.json  requirements.txt
config/: benchmark.yaml  model_settings.yaml
data/annotations/: annotation_guidelines.md  annotation_sheet_template.csv
data/benchmark/: base_items.csv  base_items.jsonl  domain_statistics.csv  evidence_packages.csv  evidence_packages.jsonl  perturbation_operators.csv  release_variant_set.csv  rubrics.csv
data/evaluation/: evaluation_ledger_schema.csv
data/items/: reliabj_schema.json  sample_base_items.jsonl
data/ledger/: README.md  sample_demo_ledger.csv
data/perturbation_templates/: confidence_phrases.json  fake_citation_templates.jsonl  prompt_injection_templates.jsonl
data/prompts/: hitl_escalation_prompt.txt  pairwise_judge_v1.txt  rubric_judge_v1.txt  scalar_judge_v1.txt  system_judge.txt
examples/: full_reproduction_workflow.md
materials/annotation/: annotation_guidelines.md  statistical_analysis_plan.md
materials/prompts/: adversarial_attack_templates.md  judge_prompt_templates.md
materials/scorecards/: gpt4_turbo_medium_risk_scorecard_example.csv  reliability_scorecard_template.csv
metadata/: SHA256SUMS.txt  data_dictionary.csv  manifest.json  validation_report.txt
scripts/: 01_validate_items.py  02_generate_variants.py  03_run_judges.py  04_compute_metrics.py  05_bootstrap_ci.py  06_make_public_release.py  generate_perturbations_reference.py  recompute_metrics.py  validate_package.py
tests/: test_parsers_metrics.py  test_perturbations.py
(+19 files in other folders)
